fixed z-index issue

--- a/src/component/banner/_banner.scss
+++ b/src/component/banner/_banner.scss
@@ -5,7 +5,7 @@
 .banner {
   margin: 10px auto;
   text-align: center;
-  width: 95%;
+  width: 100%;
   
   img {
     box-shadow:  0 1px  4px        rgba(0, 0, 0, 0.3);
@@ -13,5 +13,3 @@
   }
 
 }
-
-
