--- a/src/component/landing/_landing.scss
+++ b/src/component/landing/_landing.scss
@@ -13,7 +13,7 @@
   margin: 69px auto;
   height: 100%;
   width: 95%;
-
+  z-index: -1;
 }
 
 @media (min-width: 768px) {
